Update and add support for lots of instructions